redesigning api